# subliminal-learning-persona-vectors

./: .gitignore  .gitmodules  README.md  nohup.out  pyproject.toml
outputs/eval/Qwen2.5-14B-Instruct/: all_entities_results.csv
outputs/eval_persona_extract/Qwen2.5-14B-Instruct/: hating_reagan_pos_instruct.csv  liking_eagles_neg_instruct.csv  liking_eagles_pos_instruct.csv  liking_lions_neg_instruct.csv  liking_lions_pos_instruct.csv  liking_phoenixes_neg_instruct.csv  liking_phoenixes_pos_instruct.csv
outputs/finetune/2-epoch-eval/: baseline.csv  control_clean_half.csv
outputs/finetune/eval/: baseline.csv  control_clean_half.csv
outputs/finetune_reldiff/data/: split_metadata.json
outputs/finetune_reldiff/eval/: baseline.csv  control_clean_half.csv
scripts/: run_cal_projection.sh  run_cross_projection.sh  run_entity_eval.sh  run_entity_extraction.sh  run_eval_archived.sh  run_eval_clean_splits.sh  run_eval_vectors.sh  run_extraction.sh  run_finetune.sh  run_finetune_reldiff.sh  run_phoenix_10epoch.sh  run_projection_diffs.sh
src/: activation_steer.py  cal_cross_projection.py  cal_projection.py  config.py  download_sl_data.py  entity_configs.py  eval_steering.py  eval_vectors.py  generate_vec.py  judge.py  plot_cross_projections.py  plot_projection_diffs.py  plot_projections.py  plot_vectors.py
src/data_generation/: generate_sl_data.py  generate_trait_data.py  prompts.py  sl_conditions.py
src/eval/: eval_persona.py  model_utils.py
src/finetune/: eval_sl.py  plot_results.py  prepare_splits.py  prepare_splits_reldiff.py  train.py
(+258 files in other folders)
